src/objects/fc_csc__Refund_Unidentified_Payment_Setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>fc_csc__Accounting_Code__c</fullName>
        <description>The accounting code to be used to refund unidentified payments.</description>
        <label>Accounting Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Billing_Account_ID__c</fullName>
        <description>The billing account to be used to refund unidentified payments.</description>
        <label>Billing Account ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Payment_Method_ID__c</fullName>
        <description>The payment method to be used to refund unidentified payments.</description>
        <label>Payment Method ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Product_Rate_Plan_Charge_ID__c</fullName>
        <description>The product rate plan charge to be used to refund unidentified payments.</description>
        <label>Product Rate Plan Charge ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Product_Rate_Plan_ID__c</fullName>
        <description>The product rate plan to be used to refund unidentified payments.</description>
        <label>Product Rate Plan ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Reason_Code__c</fullName>
        <description>The reason code to be used to refund unidentified payments.</description>
        <label>Reason Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Unidentified_Payment_Number__c</fullName>
        <label>Unidentified Payment Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Refund Unidentified Payment Setting</label>
</CustomObject>